--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/navigation_message"
-        android:icon="@drawable/ic_message_black_24dp"
+        android:icon="@drawable/aboutus"
         android:title="Message" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_shopping_cart_black_24dp"
+        android:icon="@drawable/sensor"
         android:title="Cart" />
 
     <item
